<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:background="@color/background_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_login.presentation.fragments.LoginFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_login_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lInputName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:hint="@string/fragment_login_name_ask"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lInputLastName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/fragment_login_lastname_ask"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/lInputName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInputLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lInputPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/fragment_login_password_ask"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/lInputLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:text="@string/fragment_login_btn_login"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/blue"
        android:text="@string/fragment_login_btn_register"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:progressTint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>