<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardItem"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/clCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <ImageView
            android:id="@+id/ivCardLogo"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/visa_logo"
            android:contentDescription="@string/fragment_pay_card_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/fragment_pay_card_number"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/ivCardLogo"
            app:layout_constraintTop_toTopOf="@+id/ivCardLogo" />

        <TextView
            android:id="@+id/tvExpireDate"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/fragment_pay_expire_date"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivCardLogo"
            app:layout_constraintStart_toEndOf="@+id/ivCardLogo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>