<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".feature_login.presentation.fragments.NewUserFragment">

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/fragment_new_user_btn_register"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lUserName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:hint="@string/fragment_new_user_name_ask"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lUserLastName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/fragment_new_user_lastname_ask"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/lUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserLastName"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lUserPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/fragment_new_user_password_ask"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/lUserLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUserPassword"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="6" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/blue"
        android:text="@string/fragment_new_user_btn_save"
        android:textSize="20sp"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:progressTint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave" />

</androidx.constraintlayout.widget.ConstraintLayout>